--- a/public/css/app.css
+++ b/public/css/app.css
@@ -512,9 +512,6 @@ mark,
   max-width: 100%;
   height: auto; }
 
-.img-rounded {
-  border-radius: 0.3rem; }
-
 .img-thumbnail {
   padding: 0.25rem;
   line-height: 1.5;
@@ -539,15 +536,13 @@ code {
   padding: 0.2rem 0.4rem;
   font-size: 90%;
   color: #bd4147;
-  background-color: #f7f7f9;
-  border-radius: 0.25rem; }
+  background-color: #f7f7f9; }
 
 kbd {
   padding: 0.2rem 0.4rem;
   font-size: 90%;
   color: #fff;
-  background-color: #333;
-  border-radius: 0.2rem; }
+  background-color: #333; }
   kbd kbd {
     padding: 0;
     font-size: 100%;
@@ -1357,8 +1352,7 @@ pre {
   color: #55595c;
   background-color: #fff;
   background-image: none;
-  border: 0.0625rem solid #ccc;
-  border-radius: 0.25rem; }
+  border: 0.0625rem solid #ccc; }
   .form-control::-ms-expand {
     background-color: transparent;
     border: 0; }
@@ -1643,8 +1637,7 @@ fieldset[disabled] .checkbox label {
   border: 0.0625rem solid transparent;
   padding: 0.375rem 1rem;
   font-size: 1rem;
-  line-height: 1.5;
-  border-radius: 0.25rem; }
+  line-height: 1.5; }
   .btn:focus,
   .btn.focus,
   .btn:active:focus,
@@ -2082,14 +2075,12 @@ fieldset[disabled] a.btn {
 .btn-lg, .btn-group-lg > .btn {
   padding: 0.75rem 1.25rem;
   font-size: 1.25rem;
-  line-height: 1.33333;
-  border-radius: 0.3rem; }
+  line-height: 1.33333; }
 
 .btn-sm, .btn-group-sm > .btn {
   padding: 0.25rem 0.75rem;
   font-size: 0.85rem;
-  line-height: 1.5;
-  border-radius: 0.2rem; }
+  line-height: 1.5; }
 
 .btn-block {
   display: block;
@@ -2155,8 +2146,7 @@ input[type="button"].btn-block {
   list-style: none;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 0.25rem; }
+  border: 1px solid rgba(0, 0, 0, 0.15); }
 
 .dropdown-divider {
   height: 1px;
@@ -2413,10 +2403,6 @@ input[type="button"].btn-block {
 .input-group-btn,
 .input-group .form-control {
   display: table-cell; }
-  .input-group-addon:not(:first-child):not(:last-child),
-  .input-group-btn:not(:first-child):not(:last-child),
-  .input-group .form-control:not(:first-child):not(:last-child) {
-    border-radius: 0; }
 
 .input-group-addon,
 .input-group-btn {
@@ -2432,18 +2418,15 @@ input[type="button"].btn-block {
   color: #55595c;
   text-align: center;
   background-color: #eceeef;
-  border: 1px solid #ccc;
-  border-radius: 0.25rem; }
+  border: 1px solid #ccc; }
   .input-group-addon.form-control-sm, .input-group-sm > .input-group-addon,
   .input-group-sm > .input-group-btn > .input-group-addon.btn {
     padding: 0.275rem 0.75rem;
-    font-size: 0.85rem;
-    border-radius: 0.2rem; }
+    font-size: 0.85rem; }
   .input-group-addon.form-control-lg, .input-group-lg > .input-group-addon,
   .input-group-lg > .input-group-btn > .input-group-addon.btn {
     padding: 1.25rem 1.25rem;
-    font-size: 1.25rem;
-    border-radius: 0.3rem; }
+    font-size: 1.25rem; }
   .input-group-addon input[type="radio"],
   .input-group-addon input[type="checkbox"] {
     margin-top: 0; }
@@ -2671,8 +2654,7 @@ input[type="button"].btn-block {
   .nav-tabs .nav-link {
     display: block;
     padding: 0.5em 1em;
-    border: 1px solid transparent;
-    border-radius: 0.25rem 0.25rem 0 0; }
+    border: 1px solid transparent; }
     .nav-tabs .nav-link:focus,
     .nav-tabs .nav-link:hover {
       border-color: #eceeef #eceeef #ddd; }
@@ -2699,8 +2681,7 @@ input[type="button"].btn-block {
 
 .nav-pills .nav-link {
   display: block;
-  padding: 0.5em 1em;
-  border-radius: 0.25rem; }
+  padding: 0.5em 1em; }
 
 .nav-pills .nav-link.active,
 .nav-pills .nav-link.active:focus,
@@ -2739,15 +2720,9 @@ input[type="button"].btn-block {
     display: table; }
   .navbar:after {
     clear: both; }
-  @media (min-width: 34em) {
-    .navbar {
-      border-radius: 0.25rem; } }
 
 .navbar-static-top {
   z-index: 1000; }
-  @media (min-width: 34em) {
-    .navbar-static-top {
-      border-radius: 0; } }
 
 .navbar-fixed-top,
 .navbar-fixed-bottom {
@@ -2756,10 +2731,6 @@ input[type="button"].btn-block {
   left: 0;
   z-index: 1030;
   margin-bottom: 0; }
-  @media (min-width: 34em) {
-    .navbar-fixed-top,
-    .navbar-fixed-bottom {
-      border-radius: 0; } }
 
 .navbar-fixed-top {
   top: 0; }
@@ -2772,9 +2743,6 @@ input[type="button"].btn-block {
   top: 0;
   z-index: 1030;
   width: 100%; }
-  @media (min-width: 34em) {
-    .navbar-sticky-top {
-      border-radius: 0; } }
 
 .navbar-brand {
   float: left;
@@ -2804,8 +2772,7 @@ input[type="button"].btn-block {
   font-size: 1.25rem;
   line-height: 1;
   background: none;
-  border: 0.0625rem solid transparent;
-  border-radius: 0.25rem; }
+  border: 0.0625rem solid transparent; }
   .navbar-toggler:focus,
   .navbar-toggler:hover {
     text-decoration: none; }
@@ -2892,8 +2859,7 @@ input[type="button"].btn-block {
 .card {
   position: relative;
   margin-bottom: 0.75rem;
-  border: 0.0625rem solid #e5e5e5;
-  border-radius: 0.25rem; }
+  border: 0.0625rem solid #e5e5e5; }
 
 .card-block {
   padding: 1.25rem; }
@@ -2915,25 +2881,15 @@ input[type="button"].btn-block {
 .card-link + .card-link {
   margin-left: 1.25rem; }
 
-.card > .list-group:first-child .list-group-item:first-child {
-  border-radius: 0.25rem 0.25rem 0 0; }
-
-.card > .list-group:last-child .list-group-item:last-child {
-  border-radius: 0 0 0.25rem 0.25rem; }
-
 .card-header {
   padding: 0.75rem 1.25rem;
   background-color: #f5f5f5;
   border-bottom: 0.0625rem solid #e5e5e5; }
-  .card-header:first-child {
-    border-radius: 0.1875rem 0.1875rem 0 0; }
 
 .card-footer {
   padding: 0.75rem 1.25rem;
   background-color: #f5f5f5;
   border-top: 0.0625rem solid #e5e5e5; }
-  .card-footer:last-child {
-    border-radius: 0 0 0.1875rem 0.1875rem; }
 
 .card-primary {
   background-color: #0275d8;
@@ -2979,9 +2935,6 @@ input[type="button"].btn-block {
   margin-bottom: 0;
   border-left: 0; }
 
-.card-img {
-  border-radius: 0.25rem; }
-
 .card-img-overlay {
   position: absolute;
   top: 0;
@@ -2989,12 +2942,6 @@ input[type="button"].btn-block {
   bottom: 0;
   left: 0;
   padding: 1.25rem; }
-
-.card-img-top {
-  border-radius: 0.25rem 0.25rem 0 0; }
-
-.card-img-bottom {
-  border-radius: 0 0 0.25rem 0.25rem; }
 
 .card-deck {
   display: table;
@@ -3019,19 +2966,6 @@ input[type="button"].btn-block {
     .card-group .card + .card {
       margin-left: 0;
       border-left: 0; }
-    .card-group .card:first-child .card-img-top {
-      border-top-right-radius: 0; }
-    .card-group .card:first-child .card-img-bottom {
-      border-bottom-right-radius: 0; }
-    .card-group .card:last-child .card-img-top {
-      border-top-left-radius: 0; }
-    .card-group .card:last-child .card-img-bottom {
-      border-bottom-left-radius: 0; }
-    .card-group .card:not(:first-child):not(:last-child) {
-      border-radius: 0; }
-      .card-group .card:not(:first-child):not(:last-child) .card-img-top,
-      .card-group .card:not(:first-child):not(:last-child) .card-img-bottom {
-        border-radius: 0; }
 
 .card-columns {
   column-count: 3;
@@ -3044,8 +2978,7 @@ input[type="button"].btn-block {
   padding: 0.75rem 1rem;
   margin-bottom: 1rem;
   list-style: none;
-  background-color: #eceeef;
-  border-radius: 0.25rem; }
+  background-color: #eceeef; }
   .breadcrumb > li {
     display: inline-block; }
     .breadcrumb > li + li:before {
@@ -3060,8 +2993,7 @@ input[type="button"].btn-block {
   display: inline-block;
   padding-left: 0;
   margin-top: 1rem;
-  margin-bottom: 1rem;
-  border-radius: 0.25rem; }
+  margin-bottom: 1rem; }
   .pagination > li {
     display: inline; }
     .pagination > li > a,
@@ -3198,8 +3130,7 @@ input[type="button"].btn-block {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  vertical-align: baseline;
-  border-radius: 0.25rem; }
+  vertical-align: baseline; }
   .label:empty {
     display: none; }
   .btn .label {
@@ -3256,8 +3187,7 @@ a.label:hover {
 .jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
-  background-color: #eceeef;
-  border-radius: 0.3rem; }
+  background-color: #eceeef; }
 
 .jumbotron-hr {
   border-top-color: #d0d5d8; }
@@ -3268,14 +3198,12 @@ a.label:hover {
 
 .jumbotron-fluid {
   padding-right: 0;
-  padding-left: 0;
-  border-radius: 0; }
+  padding-left: 0; }
 
 .alert {
   padding: 15px;
   margin-bottom: 1rem;
-  border: 1px solid transparent;
-  border-radius: 0.25rem; }
+  border: 1px solid transparent; }
   .alert > p,
   .alert > ul {
     margin-bottom: 0; }
@@ -3351,8 +3279,7 @@ a.label:hover {
   appearance: none; }
 
 .progress[value]::-webkit-progress-bar {
-  background-color: #eee;
-  border-radius: 0.25rem; }
+  background-color: #eee; }
 
 .progress[value]::-webkit-progress-value::before {
   content: attr(value); }
@@ -3368,8 +3295,7 @@ a.label:hover {
 
 @media screen and (min-width: 0 \0) {
   .progress {
-    background-color: #eee;
-    border-radius: 0.25rem; }
+    background-color: #eee; }
   .progress-bar {
     display: inline-block;
     height: 1rem;
@@ -3911,8 +3837,7 @@ button.close {
   padding: 3px 8px;
   color: #fff;
   text-align: center;
-  background-color: #000;
-  border-radius: 0.25rem; }
+  background-color: #000; }
 
 .tooltip-arrow {
   position: absolute;
@@ -3947,8 +3872,7 @@ button.close {
   font-size: 0.85rem;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 0.3rem; }
+  border: 1px solid rgba(0, 0, 0, 0.2); }
   .popover.popover-top,
   .popover.bs-tether-element-attached-bottom {
     margin-top: -10px; }
@@ -4023,8 +3947,7 @@ button.close {
   margin: 0;
   font-size: 1rem;
   background-color: #f7f7f7;
-  border-bottom: 1px solid #ebebeb;
-  border-radius: -0.7rem -0.7rem 0 0; }
+  border-bottom: 1px solid #ebebeb; }
 
 .popover-content {
   padding: 9px 14px; }
@@ -4667,6 +4590,16 @@ a.bg-danger:hover {
 @media print {
   .hidden-print .hidden-print {
     display: none !important; } }
+
+.rel {
+  position: relative; }
+
+.abs {
+  position: absolute; }
+
+.t-r-0 {
+  top: 0;
+  right: 0; }
 
 .column-id {
   font-family: monospace;
